[gd_scene load_steps=7 format=3 uid="uid://mvca6wjq0pv6"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="1_pb4bf"]
[ext_resource type="Script" uid="uid://sxc56giuo4mj" path="res://src/ui_components/player_list/player_list.gd" id="2_ajejk"]
[ext_resource type="PackedScene" uid="uid://dqkcly2ad5fqy" path="res://src/ui_components/base/search_line_edit/search_line_edit.tscn" id="3_ha4c3"]
[ext_resource type="PackedScene" uid="uid://b2mwv4cl5sm6t" path="res://src/ui_components/base/swtich_option_button/switch_option_button.tscn" id="3_x6w1m"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="4_k60vt"]
[ext_resource type="Script" uid="uid://b7gkxesmo6fix" path="res://src/ui_components/base/defaults/default_option_button.gd" id="5_mvocu"]

[node name="PlayerList" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_pb4bf")
alignment = 1
script = ExtResource("2_ajejk")

[node name="Filters" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameSearch" parent="Filters" instance=ExtResource("3_ha4c3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ActiveView" parent="Filters" instance=ExtResource("3_x6w1m")]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 30)
layout_mode = 2

[node name="PositionSelect" type="OptionButton" parent="Filters"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
script = ExtResource("5_mvocu")

[node name="LeagueSelect" type="OptionButton" parent="Filters"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
script = ExtResource("5_mvocu")

[node name="TeamSelect" type="OptionButton" parent="Filters"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
script = ExtResource("5_mvocu")

[node name="PlayersView" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 15

[node name="Footer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
alignment = 1

[node name="First" type="Button" parent="Footer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1"
script = ExtResource("4_k60vt")

[node name="Prev2" type="Button" parent="Footer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<<"
script = ExtResource("4_k60vt")

[node name="Prev" type="Button" parent="Footer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<"
script = ExtResource("4_k60vt")

[node name="PageIndicator" type="Label" parent="Footer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "1 / 5"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Footer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"
script = ExtResource("4_k60vt")

[node name="Next2" type="Button" parent="Footer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">>"
script = ExtResource("4_k60vt")

[node name="Last" type="Button" parent="Footer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "299"
script = ExtResource("4_k60vt")

[connection signal="text_changed" from="Filters/NameSearch" to="." method="_on_name_search_text_changed"]
[connection signal="item_selected" from="Filters/ActiveView" to="." method="_on_active_view_item_selected"]
[connection signal="item_selected" from="Filters/PositionSelect" to="." method="_on_position_select_item_selected"]
[connection signal="item_selected" from="Filters/LeagueSelect" to="." method="_on_league_select_item_selected"]
[connection signal="item_selected" from="Filters/TeamSelect" to="." method="_on_team_select_item_selected"]
[connection signal="pressed" from="Footer/First" to="." method="_on_first_pressed"]
[connection signal="pressed" from="Footer/Prev2" to="." method="_on_prev_2_pressed"]
[connection signal="pressed" from="Footer/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Footer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Footer/Next2" to="." method="_on_next_2_pressed"]
[connection signal="pressed" from="Footer/Last" to="." method="_on_last_pressed"]
